--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 	left:50%; /* centers the loading animation horizontally on the screen */
 	top:50%; /* centers the loading animation vertically on the screen */
 	background-image:url(images/status.gif); /* path to your loading animation */
+	<p>Please be patient.</p>
 	background-repeat:no-repeat;
 	background-position:center;
 	margin:-100px 0 0 -100px; /* is width and height divided by two */
