--- a/contact.html
+++ b/contact.html
@@ -364,8 +364,10 @@ $('.mySlides:visible').fadeOut(function() {
 			<br>
 
 			<h3> Email </h3>
+				<a href="mailto:hello@sammyteas.ca">hello@sammyteas.ca</a><br></p>
 
 				<a href="mailto:sam.tse@live.com">sam.tse@live.com</a><br></p>
+			
 				<br>
 
 
