--- a/services.html
+++ b/services.html
@@ -489,8 +489,8 @@ $('.mySlides:visible').fadeOut(function() {
   <nav id='nav_bar'>
     <ul class='nav_links'>
 
-	    <li><a href="index.html">Portfolio</a></li>
-      <li style="background-color:lightyellow;  padding-left:30px; padding-right:30px">Services</li>
+         	<li style="padding-left:31.5px; padding-right:31.5px">Portfolio</li>
+      <li style="background-color:lightyellow;  padding-left:22.5px; padding-right:22.5px"><a href="services.html">Services</a></li>
 
       <li ><a href="about.html">About</a></li>
       <li ><a href="contact.html">Contact</a></li>
