--- a/services.html
+++ b/services.html
@@ -489,8 +489,8 @@ $('.mySlides:visible').fadeOut(function() {
   <nav id='nav_bar'>
     <ul class='nav_links'>
 
-         	<li style=""><a href="index.html">Portfolio</a></li>
-      <li style="background-color:lightyellow;  padding-left:30px; padding-right:30px">Services</li>
+         	<li style="padding-left:16px; padding-right:16px"><a href="index.html">Portfolio</a></li>
+      <li style="background-color:lightyellow;  padding-left:38px; padding-right:38px">Services</li>
 
       <li ><a href="about.html">About</a></li>
       <li ><a href="contact.html">Contact</a></li>
