--- a/index.html
+++ b/index.html
@@ -18,17 +18,24 @@
 		<link href="https://code.jquery.com/mobile/1.0rc2/jquery.mobile-1.0rc2.min.css" rel="stylesheet" />
 		<link href="resources/photoswipe.css" type="text/css" rel="stylesheet" />
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-		<script src="js/modernizr.custom.js"></script>
+		<script data-src="js/modernizr.custom.js"></script>
 
-		<script src="resources/klass.min.js"></script>
-				<script type='text/javascript' src='https://code.jquery.com/jquery-1.12.1.min.js'></script>
+		<script data-src="resources/klass.min.js"></script>
+				<script type='text/javascript' data-src='https://code.jquery.com/jquery-1.12.1.min.js'></script>
 
 
-	<script src="js/strip.pkgd.min.js"></script>
+	<script data-src="js/strip.pkgd.min.js"></script>
 	<link href="css/strip.css" media="all" rel="stylesheet" type="text/css" >
 	<style>
-	
 
+img {
+  opacity: 1;
+  transition: opacity 0.3s;
+}
+
+img[data-src] {
+  opacity: 0;
+}
 
 .text {
   white-space: nowrap; 
@@ -258,6 +265,7 @@ div.buttons {
     }
 
     .w3-content .w3-display-container {
+    	padding-top:40px;
     }
 
 
@@ -284,6 +292,10 @@ nav {
   width: 400px;
 }
 
+#largerr {
+	padding-right: 28.5px;
+	padding-left: 28.5px;
+}
 
    .w3-content .w3-display-container {
     	padding-top:80px;
@@ -392,6 +404,7 @@ nav {
 
 	</head>
 
+
 <div>
 	<div id='socials'>
 				<ul class="social-icons icon-circle icon-zoom" > 
@@ -405,7 +418,7 @@ nav {
 <div class="w3-content w3-display-container">
 
 <div class="w3-display-container mySlides">
-  <img class="fading" src="images/banners/2.jpg" style="width:100%">
+  <img class="fading" data-src="images/banners/2.jpg" style="width:100%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-blackbox">
     <h1>st<br></h1>
 
@@ -420,7 +433,7 @@ nav {
 </div>
 
 <div class="w3-display-container2 " >
-  <img class="fading" src="images/banners/1.jpg" style="width:100%">
+  <img class="fading" data-src="images/banners/1.jpg" style="width:100%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-blackbox">
        <h1>st<br></h1>
                     <p style="padding-left:6px;">book design</p>
@@ -457,8 +470,8 @@ $('.mySlides:visible').fadeOut(function() {
 
   <nav id='nav_bar'>
     <ul class='nav_links'>
-    	<li style="background-color:lightyellow; padding-left:31.5px; padding-right:31.5px">Portfolio</li>
-      <li style=" padding-left:22.5px; padding-right:22.5px"><a href="services.html">Services</a></li>
+    	<li style="background-color:lightyellow">Portfolio</li>
+      <li><a href="services.html">Services</a></li>
 
       <li id="largerr"><a href="about.html">About</a></li>
       <li id="largerr"><a href="contact.html">Contact</a></li>
@@ -486,25 +499,25 @@ $('.mySlides:visible').fadeOut(function() {
 
 			
 
-  				<div class="peat" onclick="poniard()"> <img class= "transparent" src="images/port/business/poniard.png" ><div class="overlay">
+  				<div class="peat" onclick="poniard()"> <img class= "transparent" data-src="images/port/business/poniard.png" ><div class="overlay">
     <p class="text">Poniard Press</p>
   </div></div>
 
-  <div class="peat" onclick="harper()"> <img class= "transparent" src="images/port/business/harper.png" ><div class="overlay">
+  <div class="peat" onclick="harper()"> <img class= "transparent" data-src="images/port/business/harper.png" ><div class="overlay">
     <p class="text">HarperCollins</p>
   </div></div>
 
-			<div class="peat" onclick="drawn()"> <img class= "transparent" src="images/port/business/drawn.png" ><div class="overlay">
+			<div class="peat" onclick="drawn()"> <img class= "transparent" data-src="images/port/business/drawn.png" ><div class="overlay">
     <p class="text">Drawn &amp; Quarterly</p>
   </div></div>
-  			<div class="peat" onclick="firefly()"> <img class= "transparent" src="images/port/business/firefly.png"><div class="overlay">
+  			<div class="peat" onclick="firefly()"> <img class= "transparent" data-src="images/port/business/firefly.png"><div class="overlay">
     <p class="text">Firefly Books</p>
   </div></div>
-  				<div class="peat" onclick="myFunction()"> <img class= "transparent" src="images/port/business/aci.png"> <div class="overlay"><p class="text">Art Canada Institute</p>
+  				<div class="peat" onclick="myFunction()"> <img class= "transparent" data-src="images/port/business/aci.png"> <div class="overlay"><p class="text">Art Canada Institute</p>
   </div>
   </div>
 
-			<div class="peat" onclick="penguin()"> <img class= "transparent" src="images/port/business/Penguin_logo.png"  ><div class="overlay">
+			<div class="peat" onclick="penguin()"> <img class= "transparent" data-src="images/port/business/Penguin_logo.png"  ><div class="overlay">
     <p class="text">Penguin</p>
   </div>
 			</div>
@@ -518,7 +531,7 @@ $('.mySlides:visible').fadeOut(function() {
 			<!-- Poniard -->
 
 </div>
-	<div class="main" id="poniard">
+		<div class="main" id="poniard">
 				<ul class="bk-list">
 										<li>
 				<div class="fade">
@@ -1647,8 +1660,8 @@ $('.mySlides:visible').fadeOut(function() {
 		</div><!-- /container -->
 
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script src="js/books1.js"></script>
+		<script data-src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<script data-src="js/books1.js"></script>
 		<script>
 			$(function() {
 
@@ -1726,9 +1739,16 @@ function penguin() {
 }      
 </script>
 
+<script>
+[].forEach.call(document.querySelectorAll('img[data-src]'),    function(img) {
+  img.setAttribute('src', img.getAttribute('data-src'));
+  img.onload = function() {
+    img.removeAttribute('data-src');
+  };
+});
 
+</script>
 
-</div>
 
 <div class="scrolltop" onclick="yoyo()">
 		<footer id="footer">
