--- a/index.html
+++ b/index.html
@@ -488,11 +488,11 @@ $('.mySlides:visible').fadeOut(function() {
 
   <nav id='nav_bar'>
     <ul class='nav_links'>
-    	<li style="background-color:lightyellow">Portfolio</li>
-      <li><a href="services.html">Services</a></li>
+    	<li style="background-color:lightyellow; padding-left:31.5px; padding-right:31.5px">Portfolio</li>
+      <listyle="background-color:lightyellow; padding-left:22.5px; padding-right:22.5px"><a href="services.html">Services</a></li>
 
-      <li id="largerr"><a href="about.html">About</a></li>
-      <li id="largerr"><a href="contact.html">Contact</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
 </div>
 
     </ul>
