--- a/index.html
+++ b/index.html
@@ -1166,7 +1166,7 @@ nav {
 
 
 							<h4>Art Comic</h4>
-						<h5>Matthe Thurber</h5>
+						<h5>Matthew Thurber</h5>
 							<p>
 							Publisher: Drawn &amp; Quarterly<br>
 							Role: Layout design, colouring, art direction<br>
