--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@ nav {
 				<ul class="bk-list">
 										<li>
 				<div class="fade">
-				<a href="images/port/gallerys/jungle.jpg" class='strip thumbnail' data-strip-caption="" data-strip-group="jungle">
+				<a href="images/port/gallerys/jungle.jpg" class='strip thumbnail' data-strip-caption="Painting by the inimitable James Jebusa Shannon." data-strip-group="jungle">
 						<div class="bk-book book-1 bk-bookdefault">
 						<div class="bk-front">
 							<div class="bk-cover-back" style="width: 300px; height: 414px;"></div>
