--- a/services.html
+++ b/services.html
@@ -618,12 +618,13 @@ Endpapers<br>
 <br><a onclick="rates()">Rates</a>
 </p>
 </div>
+			<a href='images/classics/franken.jpg' class='strip thumbnail' data-strip-caption="" data-strip-group="illo">
 
 					<div class="bigform" style=" z-index: -1;" >
- 				<a href="images/classics/junglebook.jpg" class='strip thumbnail' data-strip-caption="" data-strip-group="illo">
   <img s class= "transparent" src="images/about/illustration.jpg" >
   						</a>
-			<a href='images/classics/franken.jpg' class='strip thumbnail' data-strip-caption="" data-strip-group="illo"></a>
+		 				<a href="images/classics/junglebook.jpg" class='strip thumbnail' data-strip-caption="Painting by the inimitable James Jebusa Shannon." data-strip-group="illo"></a>
+
 					<a href='images/classics/velveteen2.jpg' class='strip thumbnail' data-strip-caption="" data-strip-group="illo"></a>
 							<a href='images/classics/velveteen4.jpg' class='strip thumbnail' data-strip-caption="" data-strip-group="illo"></a>
 						<a href='images/classics/velveteen.jpg' class='strip thumbnail' data-strip-caption="" data-strip-group="illo"></a>
