--- a/about.html
+++ b/about.html
@@ -385,7 +385,7 @@ $('.mySlides:visible').fadeOut(function() {
 
 <div class="contactinfo">
 <p>
-Hello, I'm Sam. I am a graphic designer and illustrator specializing in print design: typesetting, book layout, book covers, bookmarks, posters, and catalogues are all areas I'm very comfortable with. All design is storytelling. Each project has its own unique story and the role of the designer is to communicate this story in a memorable and impactful way. It's about instilling a feeling or an idea that would otherwise be forgotten. See my <a href="services.html">services</a> page for more information.
+Hello, I'm Sam. I am a graphic designer and illustrator specializing in print design: typesetting, book layout, book covers, bookmarks, posters, and catalogues are all areas I'm very comfortable with. <br><br>All design is storytelling. Each project has its own unique story and the role of the designer is to communicate this story in a memorable and impactful way. It's about instilling a feeling or an idea that would otherwise be forgotten. See my <a href="services.html">services</a> page for more information.
 
 <br>
 
