--- a/about.html
+++ b/about.html
@@ -389,8 +389,7 @@ Hello, I'm Sam. I am a graphic designer and illustrator specializing in print de
 
 <br>
 
-  <br>
-Feel free to <a href="contact.html">contact</a> me if you have any questions. Or if you'd just like to chat. <br>I'd be happy to help. <br>
+Feel free to <a href="contact.html">contact</a> me if you have any questions. <br>Or if you'd just like to chat. <br>I'd be happy to help. <br>
 
   </p>
 
