--- a/contact.html
+++ b/contact.html
@@ -360,6 +360,8 @@ $('.mySlides:visible').fadeOut(function() {
 			
 			<p>
 			
+				A book designer and illustrator who spreads his time between Montreal and Toronto. If you're in town and would like to have coffee, feel free to say hello.
+				
 		
 				<a href="mailto:hello@sammyteas.ca">hello@sammyteas.ca</a><br></p>
 
