--- a/contact.html
+++ b/contact.html
@@ -361,11 +361,11 @@ $('.mySlides:visible').fadeOut(function() {
 			<p>
 			
 				A book designer and illustrator who spreads his time between Montreal and Toronto. If you're in town and would like to have coffee, feel free to say hello.
-				
+				<br>
 		
-				<a href="mailto:hello@sammyteas.ca">hello@sammyteas.ca</a><br></p>
+				<a href="mailto:hello@sammyteas.ca">hello@sammyteas.ca</a>
 
-				<a href="mailto:sam.tse@live.com">sam.tse@live.com</a><br></p>
+				<a href="mailto:sam.tse@live.com">sam.tse@live.com</a><br>
 			
 				<br>
 			
