--- a/contact.html
+++ b/contact.html
@@ -360,10 +360,10 @@ $('.mySlides:visible').fadeOut(function() {
 			
 			<p>
 			
-				A book designer and illustrator who spreads his time between Montreal and Toronto. If you're in town and would like to have coffee, feel free to say hello.
-				<br>
+				A book designer and illustrator who spreads his time between Montreal and Toronto. If you're in town and <br>would like to have coffee, feel free to say hello.
+				<br><br>
 		
-				<a href="mailto:hello@sammyteas.ca">hello@sammyteas.ca</a>
+				<a href="mailto:hello@sammyteas.ca">hello@sammyteas.ca</a><br>
 
 				<a href="mailto:sam.tse@live.com">sam.tse@live.com</a><br>
 			
