--- a/contact.html
+++ b/contact.html
@@ -360,7 +360,7 @@ $('.mySlides:visible').fadeOut(function() {
 			
 			<p>
 			
-				A book designer and illustrator who splits his time between Montreal and Toronto. If you're in town and <br>would like to have coffee, feel free to say hello.
+				A book designer and illustrator who splits his time <br>between Montreal and Toronto. If you're in town <br>and would like to have coffee, feel free to say hello.
 				<br><br>
 		
 				<a href="mailto:hello@sammyteas.ca">hello@sammyteas.ca</a><br>
