--- a/services.html
+++ b/services.html
@@ -550,7 +550,7 @@ hyphenation is considered. <br>
 <br>
 <span style=" font-size: 17.5px"> What you get</span><br>
 2&ndash;3 &nbsp;&nbsp;design samples<br>
-&nbsp; &ensp;1 &nbsp;&nbsp;revision 
+&nbsp; &ensp;3 &nbsp;&nbsp;revisions 
 
 <br><br><a onclick="rates()">Rates</a>
 </p>
@@ -563,7 +563,7 @@ Comics/graphic novels <br>
 <br>
 <span style=" font-size: 17.5px"> What you get</span><br>
 2&ndash;3 &nbsp;&nbsp;design samples<br>
-1 &nbsp;&nbsp;revision 
+3 &nbsp;&nbsp;revisions
 
 <br><br><a onclick="rates()">Rates</a>
 </p>
@@ -599,7 +599,7 @@ No generic middle-of-the-road <br>designs here.<br>
 <br>
 <span style=" font-size: 17.5px"> What you get</span><br>
 3&ndash;4 &nbsp;&nbsp;design samples<br>
-&nbsp; &ensp;1 &nbsp;&nbsp; revision <br>
+&nbsp; &ensp;3 &nbsp;&nbsp; revisions <br>
 
 <br><a onclick="rates()">Rates</a>
 </p>
@@ -613,7 +613,7 @@ Endpapers<br>
 <br>
 <span style=" font-size: 17.5px"> What you get</span><br>
 3&ndash;4 &nbsp;&nbsp;design samples<br>
-1 &nbsp;&nbsp;revision <br>
+3 &nbsp;&nbsp;revisions <br>
 
 <br><a onclick="rates()">Rates</a>
 </p>
