--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ nav {
     <ul class='nav_links'>
 
          	<li style="background-color:lightyellow;padding-left:17px; padding-right:15.75px"><a href="index.html">Portfolio</a></li>
-      <li style="padding-left:37.75px; padding-right:38px">Services</li>
+	    <li style="padding-left:37.75px; padding-right:38px"><a href="services.html">Services</a></li>
       <li ><a href="about.html">About</a></li>
       <li ><a href="contact.html">Contact</a></li>
 </div>
