--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ nav {
   </div></div>
 
 			<div class="peat" onclick="harper()"> <img class= "transparent" src="images/port/business/harper.png" ><div class="overlay">
-    <p class="text">HarperCollins<</p>
+    <p class="text">HarperCollins</p>
   </div></div>
   			<div class="peat" onclick="drawn()"> <img class= "transparent" src="images/port/business/drawn.png"><div class="overlay">
     <p class="text">Drawn &amp; Quarterly</p>
