--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@ nav {
 
 
 	<div class="jobbanner"></div>
-			<div class="mainalt2"   id="annick">
+			<div class="mainalt2">
 				<ul class="bk-list">
 				<li style=" width: 420px">
 				<div class="fade">
@@ -564,7 +564,7 @@ nav {
 									</div>
 
 		
-						<div class="bk-info">
+						<div class="bk-info"  id="annick">
 
 								
 							<h4>Catch that Hate</h4>
