--- a/make.html
+++ b/make.html
@@ -1971,18 +1971,7 @@
                                         <select id="palleon-templates-menu" class="palleon-select palleon-select2"
                                             autocomplete="off">
                                             <option value="all" selected>All Categories</option>
-                                            <option value="blog-banners">Blog Banners</option>
-                                            <option value="banner-ads">Banner Ads</option>
-                                            <option value="collage">Collage</option>
-                                            <option value="quote">Quote</option>
-                                            <option value="medium-rectangle">Medium Rectangle Ads</option>
-                                            <option value="leaderboard">Leaderboard Ads</option>
-                                            <option value="billboard">Billboard Ads</option>
-                                            <option value="facebook-ads">Facebook Ads</option>
-                                            <option value="instagram-post">Instagram Post</option>
-                                            <option value="facebook-post">Facebook Post</option>
-                                            <option value="twitter-post">Twitter Post</option>
-                                            <option value="youtube-thumbnail">Youtube Thumbnail</option>
+                                            <option value="pgduel">Pangram Duel</option>
                                         </select>
                                         <button id="palleon-template-search" type="button"
                                             class="palleon-btn primary"><span
@@ -2033,15 +2022,8 @@
                                 <label>Size</label>
                                 <select id="palleon-canvas-size-select" class="palleon-select" autocomplete="off">
                                     <option selected value="custom" data-width="800" data-height="800">Custom</option>
-                                    <option value="" data-width="2240" data-height="1260">Blog Banner</option>
-                                    <option value="" data-width="851" data-height="315">Facebook Cover</option>
-                                    <option value="" data-width="1200" data-height="628">Facebook Ad</option>
-                                    <option value="" data-width="1080" data-height="1080">Instagram Post</option>
-                                    <option value="" data-width="750" data-height="1120">Pinterest Post</option>
-                                    <option value="" data-width="940" data-height="788">Facebook Post</option>
-                                    <option value="" data-width="1600" data-height="900">Twitter Post</option>
-                                    <option value="" data-width="1280" data-height="720">Youtube Thumbnail</option>
-                                    <option value="" data-width="1920" data-height="1080">Wallpaper</option>
+                                    <option value="" data-width="750" data-height="1050">Poker Card</option>
+                                    <option value="" data-width="900" data-height="1050">Oversized Card</option>
                                 </select>
                             </div>
                             <div>
